WIP init template design

--- a/index.html
+++ b/index.html
@@ -1,11 +1,290 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INIT</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>kitani agency</title>
 </head>
+
 <body>
-    <div>HELLO WORLD!</div>
+  <div class="layout">
+    <!-- HEADER -->
+    <div class="header">
+      <div class="header-content-left">
+        <div class="logo-wrapper">
+          <img src="/assets/image/haybi.png" alt="logo-image">
+        </div>
+      </div>
+      <div class="header-content-right">
+        <div class="navigation">
+          <div class="nav-item">About</div>
+          <div class="nav-item">Services</div>
+          <div class="nav-item">Contacts</div>
+        </div>
+        <div class="switcher">
+          <div class="left-switch active"></div>
+          <div class="right-switch"></div>
+        </div>
+      </div>
+    </div>
+    <!-- END OF HEADER -->
+
+    <!-- SECTION 1 -->
+    <div class="section-hero">
+      <div class="section-hero-wrapper">
+        <div class="hero-left">
+          <div class="head">
+            <div class="head-divider"></div>
+            <div class="head-title">Haybi</div>
+          </div>
+          <div class="text-primary-hero">
+            We build <span>amazing product</span> interfaces, brands and experience solutions.
+          </div>
+          <div class="text-secondary-hero">
+            Our goal is to give your product life, and reach their business goals. So get ready to tell us about yours
+            now
+          </div>
+          <div class="button-wrap">
+            <div class="button-text-hero">
+              <p>Check Our Work</p>
+            </div>
+          </div>
+        </div>
+        <div class="hero-right"></div>
+        <div class="button-arrow-wrapper">
+          <div class="button-arrow-icon"></div>
+        </div>
+      </div>
+    </div>
+    <!-- END OF SECTION 1 -->
+
+    <!-- SECTION 2 -->
+    <div class="section-2">
+      <div class="head">
+        <div class="head-divider"></div>
+        <div class="head-title">
+          Services
+        </div>
+      </div>
+      <div class="section-2-title-wrapper">
+        <div class="text-primary-hero">
+          We develop <span>functional processes</span> that improve products and services.
+        </div>
+      </div>
+      <div class="section-2-content-wrapper">
+        <div class="content-left">
+          <div class="card-item-wrap">
+            <div class="card-title-text">
+              Branding Design
+            </div>
+            <div class="card-description-text">
+              Agency is a full-service agency, busy designing and building beautiful digital
+            </div>
+          </div>
+          <div class="card-item-wrap">
+            <div class="card-title-text">
+              UIUX Design
+            </div>
+            <div class="card-description-text">
+              Agency is a full-service agency, busy designing and building beautiful digital
+            </div>
+          </div>
+          <div class="card-item-wrap">
+            <div class="card-title-text">
+              Software Development
+            </div>
+            <div class="card-description-text">
+              Agency is a full-service agency, busy designing and building beautiful digital
+            </div>
+          </div>
+          <div class="card-item-wrap">
+            <div class="card-title-text">
+              Software Development
+            </div>
+            <div class="card-description-text">
+              Agency is a full-service agency, busy designing and building beautiful digital
+            </div>
+          </div>
+        </div>
+        <div class="content-right"></div>
+        <div class="button-arrow-wrapper">
+          <div class="button-arrow">
+            <div class="arrow-icon-down"></div>
+          </div>
+          <div class="button-arrow">
+            <div class="arrow-icon-up"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- END OF SECTION 2 -->
+
+    <!-- SECTION 3 -->
+    <div class="section-3">
+      <div class="section-3-content-wrapper">
+        <img class="background-pattern" src="/assets/image/bgpat.png" alt="">
+        <div class="section-3-content-main">
+          <div class="content-left">
+          </div>
+          <div class="content-right">
+            <div class="head">
+              <div class="head-divider"></div>
+              <div class="head-title">
+                What we do
+              </div>
+            </div>
+            <div class="text-primary-hero">
+              We Think, Create, and Make Designs that Good and Inpire.
+            </div>
+            <div class="button-text-hero">
+              <p>Check Our Work</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- END OF SECTION 3 -->
+
+    <!-- SECTION 4 -->
+    <div class="section-4">
+      <div class="head">
+        <div class="head-divider"></div>
+        <div class="head-title">
+          What we do
+        </div>
+      </div>
+      <div class="text-primary-hero">
+        What they're <span>saying</span>.
+      </div>
+      <div class="main-content">
+        <div class="card">
+          <div class="card-head">LOGO</div>
+          <div class="card-text">
+            <div class="card-title">AWAWA</div>
+            <dic class="card-description">dasda sslssl asdt gdansme gggg</dic>
+          </div>
+          <div class="card-footer">wow</div>
+        </div>
+        <div class="card">
+          <div class="card-head">LOGO</div>
+          <div class="card-text">
+            <div class="card-title">AWAWA</div>
+            <dic class="card-description">dasda sslssl asdt gdansme gggg</dic>
+          </div>
+          <div class="card-footer">wow</div>
+        </div>
+        <div class="card">
+          <div class="card-head">LOGO</div>
+          <div class="card-text">
+            <div class="card-title">AWAWA</div>
+            <dic class="card-description">dasda sslssl asdt gdansme gggg</dic>
+          </div>
+          <div class="card-footer">wow</div>
+        </div>
+        <div class="card">
+          <div class="card-head">LOGO</div>
+          <div class="card-text">
+            <div class="card-title">AWAWA</div>
+            <dic class="card-description">dasda sslssl asdt gdansme gggg</dic>
+          </div>
+          <div class="card-footer">wow</div>
+        </div>
+      </div>
+      <div class="divider-wrapper">
+        <div class="divider"></div>
+      </div>
+    </div>
+    <!-- END OF SECTION 4 -->
+
+    <!-- SECTION 5 -->
+    <div class="section-5">
+      <div class="head-wrapper">
+        <div class="head">
+          <div class="head-divider"></div>
+          <div class="head-title">
+            What we do
+          </div>
+        </div>
+        <div class="text-primary-hero">
+          What they're <span>saying</span>.
+        </div>
+      </div>
+      <div class="main-content">
+        <div class="card">
+          <div class="card-head">
+            <div class="card-img">
+              <img src="/assets/image//thumbnnail.png" alt="">
+            </div>
+          </div>
+          <div class="card-text">
+            <div class="card-title">AWAWA</div>
+            <dic class="card-description">dasda sslssl asdt gdansme gggg</dic>
+          </div>
+          <div class="card-footer">wow</div>
+        </div>
+        <div class="card">
+          <div class="card-head">
+            <div class="card-img">
+              <img src="/assets/image//thumbnnail.png" alt="">
+            </div>
+          </div>
+          <div class="card-text">
+            <div class="card-title">AWAWA</div>
+            <dic class="card-description">dasda sslssl asdt gdansme gggg</dic>
+          </div>
+          <div class="card-footer">wow</div>
+        </div>
+        <div class="card">
+          <div class="card-head">
+            <div class="card-img">
+              <img src="/assets/image//thumbnnail.png" alt="">
+            </div>
+          </div>
+          <div class="card-text">
+            <div class="card-title">AWAWA</div>
+            <dic class="card-description">dasda sslssl asdt gdansme gggg</dic>
+          </div>
+          <div class="card-footer">wow</div>
+        </div>
+        <div class="card">
+          <div class="card-head">
+            <div class="card-img">
+              <img src="/assets/image//thumbnnail.png" alt="">
+            </div>
+          </div>
+          <div class="card-text">
+            <div class="card-title">AWAWA</div>
+            <dic class="card-description">dasda sslssl asdt gdansme gggg</dic>
+          </div>
+          <div class="card-footer">wow</div>
+        </div>
+      </div>
+    </div>
+    <!-- END OF SECTION 6 -->
+    <div class="section-6">
+      <div class="container">
+        <div class="main-content">
+          <div class="head">
+            <div class="head-divider"></div>
+            <div class="head-title">
+              What we do
+            </div>
+          </div>
+          <div class="text-primary-hero">
+            What they're <span>saying</span>.
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- END OF SECTION 6 -->
+    <div class="footer">
+      <div class="footer-left">Copyright 2020 Haybi. All Rights Reserved</div>
+      <div class="footer-center"></div>
+      <div class="footer-right"></div>
+    </div>
+  </div>
 </body>
+
 </html>
